Fixed SSL context initialization and simplified parameters to contstructors.