@@ -5,154 +5,159 @@
 
   <groupId>net.es.nsi</groupId>
   <artifactId>dds-lib</artifactId>
-  <version>0.1.0</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <properties>
+    <project.scm.id>github</project.scm.id>
+    <maven.javadoc.skip>true</maven.javadoc.skip>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-    <jersey.version>2.25.1</jersey.version>
   </properties>
 
-
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.2.RELEASE</version>
-  </parent>
-
   <dependencies>
+    <!-- Dependencies in this file need to line up with net.es.nsi.common-lib -->
     <dependency>
       <groupId>net.es.nsi</groupId>
       <artifactId>common-lib</artifactId>
-      <version>0.1.0</version>
+      <version>1.0.0</version>
     </dependency>
 
+    <!-- Needed for our use of JAXB API bindings. -->
     <dependency>
-      <groupId>javax.xml</groupId>
-      <artifactId>jaxp-api</artifactId>
-      <version>1.4.2</version>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>3.0.0</version>
     </dependency>
 
+    <!-- Needed for REST API bindings. -->
     <dependency>
-      <groupId>com.sun.xml.bind</groupId>
-      <artifactId>jaxb-xjc</artifactId>
-      <version>2.3.0</version>
+      <groupId>jakarta.ws.rs</groupId>
+      <artifactId>jakarta.ws.rs-api</artifactId>
+      <version>3.0.0</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
+    <!-- For content encoding types. -->
     <dependency>
-      <groupId>xerces</groupId>
-      <artifactId>xercesImpl</artifactId>
-      <version>2.11.0</version>
+      <groupId>jakarta.mail</groupId>
+      <artifactId>jakarta.mail-api</artifactId>
+      <version>2.0.0</version>
+      <scope>provided</scope>
     </dependency>
 
+    <!-- For priority annotations. -->
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+
+    <!-- JAXB Runtime -->
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>[3.0.0,)</version>
+    </dependency>
+
+    <!-- Helper annotations for Getter/Setters and Builders. -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.4</version>
+      <version>[1.18.20,)</version>
     </dependency>
 
     <!-- Google JSON parsers perform better than Moxy. -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.5</version>
+      <version>[2.8.7,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>27.0.1-jre</version>
+      <version>[30.1.1-jre,)</version>
     </dependency>
 
     <!-- For FileUtils -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.6</version>
+      <version>[2.11.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.ext</groupId>
       <artifactId>jersey-proxy-client</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.connectors</groupId>
       <artifactId>jersey-apache-connector</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-moxy</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.bundles</groupId>
       <artifactId>jaxrs-ri</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-common</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.6</version>
+      <version>[4.5.13,)</version>
     </dependency>
 
-    <!-- Needed for certificate DN manipulation. -->
+    <!-- Needed for certificate DN manipulation and SSL. -->
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.52</version>
-    </dependency>
-
-    <!-- SLF and Log4j for logging infrestructure. -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.25</version>
-    </dependency>
-<!--
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>log4j-over-slf4j</artifactId>
-      <version>1.7.25</version>
+      <version>1.70</version>
     </dependency>
 
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId>
-      <version>1.7.25</version>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-jdk15on</artifactId>
+      <version>1.70</version>
     </dependency>
 
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>1.7.25</version>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bctls-jdk15on</artifactId>
+      <version>1.70</version>
     </dependency>
--->
-    <!-- To handle XML dateTime manipulation. -->
+
+    <!-- Log4j for logging. -->
     <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-      <version>2.10.1</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>[2.17.0,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>[2.17.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>[4.13.2,)</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -160,16 +165,25 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <generateBackupPoms>false</generateBackupPoms>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-          <testSource>${java.version}</testSource>
-          <testTarget>${java.version}</testTarget>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
+          <!-- Compatible down to java 1.8. Tested 1.8, 11, and 15. -->
+          <source>1.8</source>
+          <target>1.8</target>
+          <!-- <release>11</release> -->
           <compilerArgument>-Xlint:deprecation</compilerArgument>
+          <compilerArgument>-Xlint:unchecked</compilerArgument>
         </configuration>
       </plugin>
 
@@ -179,7 +193,7 @@
         for https://java.net/jira/browse/MAVEN_JAXB2_PLUGIN-80. -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>properties-maven-plugin</artifactId>
-        <version>1.0.0</version>
+        <version>1.0-alpha-2</version>
         <executions>
           <execution>
             <id>set-additional-system-properties</id>
@@ -191,8 +205,8 @@
         <configuration>
           <properties>
             <property>
-              <name>javax.xml.accessExternalSchema</name>
-              <value>file,http</value>
+              <name>javax.xml.accessExternalDTD</name>
+              <value>file,http,all</value>
             </property>
           </properties>
         </configuration>
@@ -201,64 +215,94 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>1.6</version>
-        <dependencies>
-          <dependency>
-            <groupId>xml-apis</groupId>
-            <artifactId>xml-apis</artifactId>
-            <version>1.4.01</version>
-          </dependency>
-          <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xercesImpl</artifactId>
-            <version>2.11.0</version>
-          </dependency>
-        </dependencies>
+        <version>2.4</version>
         <executions>
+          <!-- Here we build the NSI Topology schema. -->
           <execution>
             <id>dds</id>
             <goals>
               <goal>xjc</goal>
             </goals>
             <configuration>
-              <bindingDirectory>${basedir}/src/main/resources/xsd</bindingDirectory>
-              <bindingFiles>dds.xjb</bindingFiles>
-              <schemaDirectory>${basedir}/src/main/resources/xsd</schemaDirectory>
-              <schemaFiles>ogf_nsi_discovery_protocol_v1_0.xsd</schemaFiles>
+              <sources>
+                <source>${basedir}/src/main/schema/dds/xsd</source>
+              </sources>
+              <xjbSources>
+                <xjbSource>${basedir}/src/main/schema/dds/xjb</xjbSource>
+              </xjbSources>
               <packageName>net.es.nsi.dds.lib.jaxb.dds</packageName>
-              <clearOutputDir>false</clearOutputDir>
             </configuration>
           </execution>
         </executions>
+
+        <dependencies>
+          <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>3.0.0</version>
+            <scope>compile</scope>
+          </dependency>
+
+          <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>3.0.0</version>
+            <scope>compile</scope>
+          </dependency>
+
+          <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>3.0.0</version>
+            <scope>compile</scope>
+          </dependency>
+        </dependencies>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.0</version>
+        <configuration>
+          <argLine>--illegal-access=permit</argLine>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${basedir}/var</directory>
+            </fileset>
+          </filesets>
+        </configuration>
       </plugin>
     </plugins>
   </build>
 
   <repositories>
     <repository>
-      <id>spring-releases</id>
-      <url>https://repo.spring.io/libs-release</url>
+      <id>central</id>
+      <url>https://repo1.maven.org/maven2/</url>
+    </repository>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/BandwidthOnDemand/*</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>spring-releases</id>
-      <url>https://repo.spring.io/libs-release</url>
-    </pluginRepository>
-  </pluginRepositories>
-
   <distributionManagement>
     <repository>
-      <id>surfnet-public-releases</id>
-      <name>surfnet-public-releases</name>
-      <url>http://atlas.dlp.surfnet.nl/nexus/content/repositories/public-releases</url>
+      <id>github</id>
+      <name>GitHub BanwidthOnDemand nsi-dds-lib Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/BandwidthOnDemand/nsi-dds-lib</url>
     </repository>
-    <snapshotRepository>
-      <id>surfnet-public-snapshots</id>
-      <name>surfnet-snapshots</name>
-      <url>http://atlas.dlp.surfnet.nl/nexus/content/repositories/public-snapshots</url>
-    </snapshotRepository>
   </distributionManagement>
+
 </project>
 
